# ChangeLog for sys-fs/aufs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Feb 2008; (Tommy[D]) tommy100@gmx.de -files/parallel-build.patch:
  Drop old patch

  17 Feb 2008; Tiziano Müller <dev-zero@gentoo.org>
  +files/aufs-20080207-disable_security_inode_permission.patch,
  -aufs-20080207.ebuild, +aufs-20080207-r1.ebuild:
  Rev.bump to add patch for kernel 2.6.24 compatibility (module compiles but
  doesn't load).

  07 Feb 2008; (Tommy[D]) tommy100@gmx.de -aufs-20071216.ebuild,
  +aufs-20080207.ebuild:
  New Version, some bugfixes and drop nfsexport USE flag for now

  05 Feb 2008; (Tommy[D]) tommy100@gmx.de aufs-20071216.ebuild:
  Fix previously introduced problem (running kernel != /usr/src/linux)

  13 Jan 2008; (Tommy[D]) tommy100@gmx.de aufs-20071216.ebuild:
  Add missing die

  10 Jan 2008; (Tommy[D]) tommy100@gmx.de +files/parallel-build.patch,
  aufs-20071216.ebuild:
  adding upstream patch for parallel build

  09 Jan 2008; (Tommy[D]) tommy100@gmx.de aufs-20071216.ebuild:
  workaround for multijob error

  02 Jan 2008; (Tommy[D]) tommy100@gmx.de aufs-20071216.ebuild:
  add a fix for ~amd64

  20 Dec 2007; (Tommy[D]) tommy100@gmx.de aufs-20071216.ebuild:
  simplify

  16 Dec 2007; (Tommy[D]) tommy100@gmx.de -aufs-20071125.ebuild,
  +aufs-20071216.ebuild:
  Added latest Makefile from URL pointed at http://aufs.sourceforge.net
  and changed src_compile to get it to work. + Version bump

  14 Dec 2007; (Tommy[D]) tommy100@gmx.de aufs-20071125.ebuild:
  Drop ksize and lhash patch

  26 Nov 2007; (Tommy[D]) tommy100@gmx.de -files/aufs-20070212-ksize.patch,
  -files/aufs-20070212-lhash.patch, -files/aufs-20070402-ksize.patch,
  -files/aufs-20070402-lhash.patch, +aufs-20070402.ebuild:
  Keep old version as the patches do not apply to the new version + drop old
  patches

  26 Nov 2007; (Tommy[D]) tommy100@gmx.de ++, -aufs-20070402.ebuild:
  Version bump to work with kernel-2.6.22 (svn-tarball, report and request