@@ -4,6 +4,6 @@ AUX aufs-20080207-disable_security_inode_permission.patch 457 RMD160 9e7b8f0cc39
 DIST aufs-20070402.tar.bz2 120097 RMD160 13f3a1cc7a581b1b96255262af01d90c3f601a22 SHA1 496b01279214d0a5836498ea233176e3424a3280 SHA256 c11e7c5835196873a60ac3ccae147ba4941239a0bee23beec8747bc95997eb62
 DIST aufs-20080207.tar.bz2 196326 RMD160 d35ff2890742cc6e19b9b35516db8f83c7d6ed30 SHA1 383cccb8bc2b3e25d04e2be8579014fbae024ceb SHA256 c90583ce1e98bb7eb5611e4d0542896d57d225c0f1c2bbae8d30e3075b994b8a
 EBUILD aufs-20070402.ebuild 4164 RMD160 0a206413b832bf09a117376abd48b7c463ef7011 SHA1 34d1891a98809fbb85dfa2964f209dff769c3d0f SHA256 188bfd0d3be8d118c35354a89a5a171c80bd0f0ed72a32acd5526d712294b113
-EBUILD aufs-20080207-r1.ebuild 1916 RMD160 35c1fa669aa0cfd0844427ceb262ed25caf06653 SHA1 2d707d7e65cd94c569d2b853072b4f70ae729b03 SHA256 f69b14af0e7968d62cc62b935ad08eb39d10803e5e4c6c8a25e0604746ca5b46
-MISC ChangeLog 3296 RMD160 af8fe400aa123dca31401a367aa91934014ced7c SHA1 2a4bfad254ad9b7d088d8bbf229857fdc6f548b4 SHA256 e0fe2adce80dc71066008343a0cfb59244eab91d0e5888830e35c27192d718fb
+EBUILD aufs-20080207-r1.ebuild 2157 RMD160 2d8808575c1561877794c5bd24fcfccb88ede687 SHA1 895f4348e18e9386a29eb8c90cfe4c0d9e75c069 SHA256 2ef6bae05540c7c76d352812bbee69acdfad6ab025755b2f34c8e4471d15f645
+MISC ChangeLog 3444 RMD160 484acd0a87b51feb33d50039449398302ac603c0 SHA1 3e76eef779f62184c47d5f426642c3e2c8b42d65 SHA256 756e939ab5eb0722651c79143d5c1dfcc7ce9cbe1192bccbf348bc8054dab34d
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
